--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -1,9 +1,20 @@
 <% provide(:title, @debate.title) %>
 
 <%= @debate.content %>
-
-<%= render @debate%>
-
-<%= @users.first.email %>
-
+</br>
 <%= current_user.name %>
+</br>
+<%= render @debate%>
+</br>
+
+<% @users.count  %>
+
+<% if current_user.debating?(@debate)%>
+	Tu participes déjà
+<% else %>
+<% form_for(current_user.performances.build(debate_id: @debate.id), remote: true) do |f| %>) %>
+<div><%= f.hidden_field :debate_id %></div>
+	  <%= f.submit "Participate", class: "btn btn-large btn-primary" %>
+	<% end %>
+<% end %>
+
