--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -1,20 +1,11 @@
-<% provide(:title, @debate.title) %>
+<%= @debate.title%>
 
-<%= @debate.content %>
-</br>
-<%= current_user.name %>
-</br>
-<%= render @debate%>
 </br>
 
-<% @users.count  %>
+<%= @debate. content %>
 
-<% if current_user.debating?(@debate)%>
-	Tu participes déjà
-<% else %>
-<% form_for(current_user.performances.build(debate_id: @debate.id), remote: true) do |f| %>) %>
-<div><%= f.hidden_field :debate_id %></div>
-	  <%= f.submit "Participate", class: "btn btn-large btn-primary" %>
-	<% end %>
-<% end %>
+</br>
+
+<%= @debate.type_of_debate%>
+
 
