--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,11 +10,9 @@
       <section>
         <%= render 'shared/micropost_form' %>
       </section>
+	<%= link_to "Create a debate", create_path, 
+                                class: "btn btn btn-primary" %>
     </aside>
-	<div class="span8">
-	   <h3>Micropost Feed</h3>
-	     <%= render 'shared/feed' %>
-	</div>
   </div>  
 <% else %>
   <div class="center hero-unit">
