--- a/app/views/doulins/_form.html.erb
+++ b/app/views/doulins/_form.html.erb
@@ -12,6 +12,12 @@
     </div>
   </div>
 
+  <div class="field">
+  <%= f.label :tag_list, "Tags (separated by commas)" %><br />
+  <%= f.text_field :tag_list %>
+  </div>
+
+
   <div class="form-actions">
     <%= f.submit nil, :class => 'btn btn-primary' %>
     <%= link_to t('.cancel', :default => t("helpers.links.cancel")),
