--- a/app/views/doulins/index.html.erb
+++ b/app/views/doulins/index.html.erb
@@ -1,38 +1,6 @@
-<%- model_class = Doulin -%>
-<div class="page-header">
-  <h1><%=t '.title', :default => model_class.model_name.human.pluralize %></h1>
-</div>
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th><%= model_class.human_attribute_name(:context) %></th>
-      <th><%= model_class.human_attribute_name(:title) %></th>
-      <th><%= model_class.human_attribute_name(:created_at) %></th>
-      <th><%=t '.actions', :default => t("helpers.actions") %></th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @doulins.each do |doulin| %>
-      <tr>
-        <td><%= link_to doulin.id, doulin_path(doulin) %></td>
-        <td><%= doulin.context %></td>
-        <td><%= doulin.title %></td>
-        <td><%=l doulin.created_at %></td>
-        <td>
-          <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_doulin_path(doulin), :class => 'btn btn-mini' %>
-          <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      doulin_path(doulin),
-                      :method => :delete,
-                      :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
-                      :class => 'btn btn-mini btn-danger' %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+</br>
+</br>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_doulin_path,
-            :class => 'btn btn-primary' %>
+<%= render "shared/index", :object => @doulins %>
+
+<%=link_to "sport", doulins_path(:cat => 1)%>
