--- a/app/views/debates/index.html.erb
+++ b/app/views/debates/index.html.erb
@@ -1,8 +1,6 @@
-<% provide(:title, 'All Debates') %>
-<h1>All users</h1>
+</br>
+</br>
 
-<%= will_paginate %>
-<ul class="debates">
-	<%= render @debates%>
-</ul>
-<%= will_paginate %>
+<%= render "shared/index", :object => @debates %>
+
+<%=link_to "sport", debates_path(:cat => 1)%>
