--- a/app/views/shared/_comment_form.html.erb
+++ b/app/views/shared/_comment_form.html.erb
@@ -1,7 +1,9 @@
-<%= form_for(@comment) do |f| %>
+<%= form_for comment do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
-    <%= f.text_area :content, placeholder: "..." %>
+    <%= f.text_field :content, placeholder: "comment ..." %>
+	<%= f.hidden_field :commentable_id, :value => commentable.id %>
+	<%= f.hidden_field :commentable_type, :value => type %>
   </div>
   <%= f.submit "Post", class: "btn btn-large btn-primary" %>
 <% end %>
