--- a/app/views/shared/_index.html.erb
+++ b/app/views/shared/_index.html.erb
@@ -1,16 +1,22 @@
-<div id="debates-container" class="span9">  
-      <% if object.any? %>
-		</br>
-        <div class="courses_list">
-        <% object.each do |ob| %>
-		 <% if ob.class == Debate %>
-		 	<%= render "shared/debate_badge", :debate => ob %>
-		<% elsif ob.class == Doulin %>
-			<%= render "shared/doulin_badge", :doulin => ob %>
-		<% elsif ob.class == Challenge %>
-			 <%= render "shared/challenge_badge", :challenge => ob %>
-		<% end %>
-		<% end %>
-        </div>
-      <% end %>
-  </div>
+<section id="list container">
+
+		<%= render "shared/menu_cat"%>
+
+		<div class="span7 offset " id="list-container1">  
+		      <% if object.any? %>
+				</br>
+		        <div class="courses_list">
+		        <% object.each do |ob| %>
+				 <% if ob.class == Debate %>
+				 	<%= render "shared/debate_badge", :debate => ob %>
+				<% elsif ob.class == Doulin %>
+					<%= render "shared/doulin_badge", :doulin => ob %>
+				<% elsif ob.class == Challenge %>
+					 <%= render "shared/challenge_badge", :challenge => ob %>
+				<% end %>
+				<% end %>
+		        </div>
+		      <% end %>
+		  </div>
+
+</section>
