--- a/app/views/doulins/show.html.erb
+++ b/app/views/doulins/show.html.erb
@@ -1,9 +1,26 @@
+</br>
+</br>
 
+<%= @doulin.users.count%>
+
+<%= current_user.try(:admin)%>
 
 <%- model_class = Doulin -%>
 
 Tags: <%= raw @doulin.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %>
 
+<% if user_signed_in? %>
+| <%= pluralize @doulin.reputation_for(:vote_experts).to_i, "vote" %>
+| <%= pluralize @doulin.count_for, "vote pour" %>
+| <%= pluralize @doulin.count_against, "vote contre" %>
+
+<% if current_user  %>
+  | <%= link_to "up", vote_expert_doulin_path(@doulin, type: "up"), method: "post" %>
+  | <%= link_to "down", vote_expert_doulin_path(@doulin, type: "down"), method: "post" %>
+<% end %>
+
+<%else%> Connecte-toi pour voter!
+<% end %>
 
 <div class="page-header">
   <h1><%=t '.title', :default => model_class.model_name.human %></h1>
@@ -27,3 +44,30 @@ Tags: <%= raw @doulin.tag_list.map { |t| link_to t, tag_path(t) }.join(', ') %>
               :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
               :class => 'btn btn-danger' %>
 </div>
+
+<% if @doulin. state = "offline"%>
+	Rajouter un expert!
+	<%= link_to "hey baby",new_doulin_expertise_path(@doulin.id) %>
+	<%= form_for @expertise do |f| %>
+
+	  <%= f.label :content, "Position" %><br />
+	  <%= f.number_field :position %><br/>
+
+	  <%= f.label :content, "User" %><br />
+	  <%= f.text_field :user_id %><br/>
+	
+	  <%= f.label :content, "Doulin_id" %><br />
+	  <%= f.text_field :doulin_id %><br/>
+
+	<%= f.submit "Rajouter" %>
+	<%end%>
+<% end %>
+
+
+<% if @comments.any? %>
+<% @comments.each do |comment| %>
+	<%= render "shared/comment", comment: comment %>
+<%end%>
+<%end%>
+
+<%= render "shared/comment_form", comment: @comment, commentable: @doulin, type: "Doulin"%>
