--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,57 +32,98 @@
   <body>
     <div id="wrap">
       <header>
-        <div class="container">
-          <div id="logo">
-            <%= link_to image_tag('logo_moutoner.png', :alt => 'Moutoner'), root_path %>
+        <div class="container"> 
+	     <div class ="row"> 
+		  <div class="span4", style="float:left">
+			<div id="Notifications", class ="row">
+				NOTIFICATIONS
+			</div>
+			<div id="search", class ="row">
+	      		<%= form_tag ("/search_results"), :method => "get", :class=>"search-form" do %>
+
+				  <%= text_field_tag ("search"), nil, :class => 'search_input',
+				    :onblur=>"if(this.value=='')this.setAttribute('class', 'search_input');",
+				    :onfocus=>"this.setAttribute('class', 'search_input_clear');"
+				 %>
+				<% end %>
+			</div>
+	      </div>
+
+	      <div class="span4">
+			<div class="span2">
+	      	<div id="logo", class="img-circle">
+	              <%= link_to image_tag('logo_moutoner.png', :alt => 'Moutoner'), root_path %>
+	        </div>
+			</div>
+	      </div>
+		    
+          <div class ="span4", style:"float:right">
+			<div class ="row">
+			  <% if user_signed_in? %>
+	              <div id="user-nav" class="btn-group", style:"float:right">
+	                <a class="btn" data-toggle="dropdown" href="#">
+	                  <i class="icon-user"></i>
+	                  <%= current_user.name %>
+	                </a>                
+	                <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+	                  <span class="caret"></span>
+	                </a>
+	                <ul class="dropdown-menu">
+	                  <li><%= link_to "Profil", user_path(current_user) %></li>
+	                  <li><%= link_to "Déconnexion", destroy_user_session_path, :method=>'delete' %></li>
+	                </ul>
+	              </div>
+	          <% else %>
+	              <ul id="user-nav" class="unstyled", style:"float:right">
+	                <%= content_tag(:li, link_to(raw("cr&eacute;er un compte"), new_user_registration_path)) %>
+	                <%= content_tag(:li, link_to("s'identifier", new_user_session_path)) %>
+	              </ul>
+	          <% end %>
+			</div>
+			<div class ="row", id="debat-nav">
+				<%= content_tag(:li, :class => ("active" if current_page?(apprendre_path))) do %>
+	              <%= link_to apprendre_path do %>
+	                <%= content_tag(:strong, "APPRENDRE A DEBATTRE") %>
+	              <% end %>
+	            <% end %>
+			</div>
           </div>
-          
-          <ul id="main-nav" class="unstyled">
-            <%= content_tag(:li, :class => ("active" if current_page?(list_path))) do %>
-              <%= link_to list_path do %>
-                <%= content_tag(:strong, "Les Débats") %>
-              <% end %>
-            <% end %>
-            <%= content_tag(:li, :class => ("active" if current_page?(apprendre_path))) do %>
-              <%= link_to apprendre_path do %>
-                <%= content_tag(:strong, "Les astuces") %>
-              <% end %>
-            <% end %>
-            <% if current_user %>
-              <li>&bull;</li>
-              <%= content_tag(:li, :class => ("active" if current_page?(user_path(current_user)))) do %>
-                <%= link_to user_path(current_user) do %>
-                  <%= content_tag(:strong, "Mon Profil") %>
-                <% end %>
-              <% end %>
-            <% end %>
-          </ul>
-          
-          <% if user_signed_in? %>
-            <div id="user-nav" class="btn-group">
-              <a class="btn" data-toggle="dropdown" href="#">
-                <i class="icon-user"></i>
-                <%= current_user.name %>
-              </a>                
-              <a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-                <span class="caret"></span>
-              </a>
-              <ul class="dropdown-menu">
-                <li><%= link_to "Profil", user_path(current_user) %></li>
-                <li><%= link_to "Déconnexion", destroy_user_session_path, :method=>'delete' %></li>
-              </ul>
-            </div>
-          <% else %>
-            <ul id="user-nav" class="unstyled">
-              <%= content_tag(:li, link_to(raw("cr&eacute;er un compte"), new_user_registration_path)) %>
-              <%= content_tag(:li, link_to("s'identifier", new_user_session_path)) %>
-            </ul>
-          <% end %>
-        </div>
+		 </div>
+		
+		
+		 <div class ="row"> 
+		   <div class = "span12", id = "navigation">
+		 	<div class = "span9">
+		     <ul id="main-nav" class="unstyled">
+                 <%= content_tag(:li, :class => ("active" if current_page?(list_path))) do %>
+                   <%= link_to list_path do %>
+                     <%= content_tag(:strong, "TOUS LES DEBATS  |") %>
+                   <% end %>
+                 <% end %>
+                 <%= content_tag(:li, :class => ("active" if current_page?(doulins_path))) do %>
+                   <%= link_to doulins_path do %>
+                     <%= content_tag(:strong, "LES EXPERTS  |") %>
+                   <% end %>
+                 <% end %>
+          		<%= content_tag(:li, :class => ("active" if current_page?(debates_path))) do %>
+                   <%= link_to debates_path do %>
+                     <%= content_tag(:strong, "MURS DE DEBATS  |") %>
+                   <% end %>
+                 <% end %>
+		 		<%= content_tag(:li, :class => ("active" if current_page?(challenges_path))) do %>
+                   <%= link_to challenges_path do %>
+                     <%= content_tag(:strong, "LES CHALLENGES") %>
+                   <% end %>
+                 <% end %>
+               </ul>
+		 	</div>
+		   </div>
+		 </div>
+		
+		</div>
       </header>
       
       <section id="main-wrap">
-        <%= render :partial => "shared/flash_messages" unless action_name == "homepage" %>
         <%= content_for?(:content) ? yield(:content) : yield %>
       </section>
     </div>
