--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -86,11 +86,11 @@
 	  </div>
 	
 	<%= render "shared/menu_cat"%>
-	
+
 	<div class="span7 offset 4" id="best-debates2">
-         <%= render "shared/challenge_badge", :challenge => @challenge%>
-         <%= render "shared/doulin_badge", :doulin => @doulin %>
-         <%= render "shared/debate_badge", :debate => @debate %>
+      <%#   <%= render "shared/challenge_badge", :challenge => @challenge%>
+      <%#   <%= render "shared/doulin_badge", :doulin => @doulin %>
+      <%#   <%= render "shared/debate_badge", :debate => @debate %>
 	</div>
   
 </section>
